do minor code sophistications to gain more robustness (findbugs plugin)